--- a/package.json
+++ b/package.json
@@ -8,9 +8,24 @@
     "type": "git",
     "url": "git+ssh://git@github.com/hisamafahri/ivy.git"
   },
-  "module": "src/index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
+    "prepublishOnly": "bun run build",
     "test": "vitest"
   },
   "devDependencies": {
